Stopped overflowing results
Have put the trees/entries into a horizontal scroll bar. Will figure
out how to display them better soon.

--- a/assets/static/stylesheet.css
+++ b/assets/static/stylesheet.css
@@ -30,14 +30,6 @@ header {
     text-align: center;
 }
 
-.consistency-diagram {
-    overflow: auto;
-}
-.entries-json {
+.entries-json, .inclusion-proof, .consistency-diagram {
     overflow: auto;    
-}
-
-#get_consistency_diagram {
-    height:100px !important;
-    width: 540px !important;
 }
